@@ -1,3 +1,7 @@
+2009-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* am/synctex.am: remove unused files Makefile, Makefile.in.
+
 2009-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* synctex_main.c: make 'synctex help update' work as advertised.
